<resources>
    <string name="app_name">Pizarra</string>
    <string name="prefs_file">com.galvezssr.pizarra.PREFERENCE_FILE_KEY</string>
    <string name="login_start">Ingrese sus credenciales de cuenta</string>
    <string name="email">Correo electrónico:</string>
    <string name="password">Contraseña:</string>
    <string name="access">Acceder</string>
    <string name="extra_logins">Otras formas de inicio de sesión</string>
    <string name="google">Google</string>
    <string name="new_account">¿No dispone de una cuenta? Creese una ahora</string>
    <string name="register">Registrarse</string>
    <string name="user_data">Ingrese sus datos</string>
    <string name="user_name">Nombre completo:</string>
    <string name="user_phone">Número de Telefono:</string>
    <string name="repet_password">Repetir Contraseña:</string>
    <string name="todo">TODO</string>
    <string name="create_table_string">Añada un nombre para la tabla</string>
    <string name="name">Nombre:</string>
    <string name="detail_name">- NOMBRE:</string>
    <string name="create_table">Crear tabla</string>
    <string name="pizarra_info">Info: en este modelo, cuando creamos una tabla, podremos luego acceder a esta misma para crear multiples tareas que se guardaran en base al nombre de la tabla, asi que es importante poner nombres simples y que se entiendan facilmente</string>
    <string name="task_view">Vista de tareas</string>
    <string name="task_view_create">Vista de tareas (crear)</string>
    <string name="task_view_detail">Vista de tareas (detalle)</string>
    <string name="description">Descripción:</string>
    <string name="detail_description">- DESCRIPCIÓN:</string>
    <string name="create_task">Introduzca datos para crear una tarea</string>
    <string name="priority">Prioridad:</string>
    <string name="detail_priority">- PRIORIDAD:</string>
    <string name="select_priority">Seleccione la prioridad</string>
    <string name="low">Baja</string>
    <string name="medium">Media</string>
    <string name="high">Alta</string>
    <string name="create">Crear</string>
    <string name="limit_date">Seleccione la fecha de finalización</string>
    <string name="detail_date">- FECHA LIMITE:</string>
    <string name="select_date">Seleccione una fecha</string>
    <string name="detail_menu_1">Mover a otra tabla</string>
    <string name="detail_menu_2">Modificar</string>
    <string name="done">DONE</string>
    <string name="edit_task">Inserte los nuevos datos</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="first_table">No hay tablas, cree su primera tabla</string>
    <string name="log_off">Cerrar Sesión</string>
    <string name="show_extra">Mostrar Acerca</string>
    <string name="example_create_table">- Ejemplo: Tareas</string>
    <string name="change_task_from_table">Cambiar de tabla</string>
    <string name="change_task_from_table_string">Eliga a que tabla desea mover su tarea</string>
    <string name="extra_field_1">- NOMBRE DEL DESARROLLADOR</string>
    <string name="extra_field_2">- VERSIÓN DE LA APLICACIÓN</string>
    <string name="extra_field_3">- LENGUAJE DE LA APLICACIÓN</string>
    <string name="extra_field_4">- TECNOLOGIA APLICADA</string>
</resources>