<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/change_task_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_task_from_table_string"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:minHeight="48dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:spinnerMode="dropdown"
        android:textSize="16sp" />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/change_task_from_table" />

</RelativeLayout>
